# sol2-begin

./: .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/App/: CMakeLists.txt
src/App/source/: main.cpp
src/Series/: CMakeLists.txt
src/Series/include/: index.h
src/Series/lua/: b_variables.lua
src/Series/source/: a_hello_lua.cpp  b_variables.cpp  c_functions.cpp  opening_a_state.cpp
src/Vendors/: CMakeLists.txt
src/Vendors/lua-5.4.4/: CMakeLists.txt
test/: CMakeLists.txt  ExampleTest.cpp  main.cpp
