if(NOT TARGET gtest_main AND ENABLE_TEST)
    option(gtest_disable_pthreads "Disable uses of pthreads in gtest." ON)
    add_subdirectory(googletest)
    set_target_properties(gtest_main PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gtest PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock PROPERTIES FOLDER Vendors/googletest)
    set_target_properties(gmock_main PROPERTIES FOLDER Vendors/googletest)
endif()

if(NOT sol2)
    option(SOL2_CI "Whether or not we are in continguous integration mode" OFF)
    option(SOL2_SYSTEM_INCLUDE "Whether or not sol2 should be considered a system include. This helps suppress errors for when the sol2 author is a big derp and doesn't fix every single warning, ever." ON)
    option(SOL2_TESTS "Enable build of tests" OFF)
    option(SOL2_EXAMPLES "Enable build of examples" OFF)
    option(SOL2_INTEROP_EXAMPLES "Enable build of interop examples" OFF)
    option(SOL2_DYNAMIC_LOADING_EXAMPLES "Enable build of interop examples" OFF)
    option(SOL2_SINGLE "Enable generation and build of single header files" OFF)
    option(SOL2_DOCS "Enable build of documentation" OFF)
    option(SOL2_ENABLE_INSTALL "Enable installation of Sol2" OFF)
    add_subdirectory(sol2)
    set_target_properties(sol2 PROPERTIES FOLDER Vendors/sol2)
endif()

if(NOT lua)
    add_subdirectory(lua-5.4.4)
    set_target_properties(lua PROPERTIES FOLDER Vendors/lua-5.4.4)
endif()